fix(content-page-edit): avoid scrollable too high on content-page edit

--- a/ui/src/react-admin/modules/shared/components/Sidebar/Sidebar.scss
+++ b/ui/src/react-admin/modules/shared/components/Sidebar/Sidebar.scss
@@ -7,7 +7,6 @@
 
 .o-sidebar {
   width: 100%;
-  height: 100vh;
   background-color: colors.$color-gray-700;
   color: colors.$color-gray-50;
 }
